--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.13.1
   cloud_firestore: ^3.1.10
   intl: ^0.17.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
