--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^3.1.10
   intl: ^0.17.0
   flutter_datetime_picker: ^1.5.1
+  firebase_auth: ^3.5.0
 
 dev_dependencies:
   flutter_test:
