--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,14 @@ dependencies:
   intl: ^0.17.0
   flutter_datetime_picker: ^1.5.1
   firebase_auth: ^3.5.0
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
