--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  csv: ^5.0.2
   cupertino_icons: ^1.0.2
   firebase_core: ^1.13.1
   cloud_firestore: ^3.1.10
@@ -20,6 +21,7 @@ dependencies:
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   syncfusion_flutter_charts: ^20.4.38
+  pdf_text: ^0.5.0
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +48,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  #assets:
+  assets:
+    - assets/
   #  - res/images/drawer_header_background.png
 
   #   - images/a_dot_burr.jpeg
