CSV can now be loaded into app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,8 +45,9 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.budget_app"
         //minSdkVersion flutter.minSdkVersion
+        compileSdkVersion 33
         minSdkVersion 19
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 32
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
