--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: budget_app
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
-
 
 dependencies:
   flutter:
@@ -16,12 +15,14 @@ dependencies:
   firebase_core: 2.13.1
   cloud_firestore: 4.8.0
   intl: 0.17.0
+  file_picker: 5.0.0
   flutter_datetime_picker: 1.5.1
   firebase_auth: 4.6.2
   hive: 2.0.5
   hive_flutter: 1.1.0
   syncfusion_flutter_charts: 20.4.38
-  pdf_text: 0.5.0
+  permission_handler: ^10.2.0
+  # pdf_text: 0.5.0
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +42,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
