--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,11 @@ dependencies:
   firebase_auth: 4.6.2
   hive: 2.0.5
   hive_flutter: 1.1.0
-  syncfusion_flutter_charts: 20.4.38
+  # syncfusion_flutter_charts: 20.4.38
   permission_handler: ^10.2.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  community_charts_flutter: ^1.0.1
   # pdf_text: 0.5.0
 
 dev_dependencies:
